--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300&family=Raleway:wght@100;200;500;600&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,600;1,400&display=swap');
 * {
   margin: 0;
   padding: 0;
+  color: white;
   box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 body {
   width: 100%;
   min-height: 100vh;
-  background-color: #000;
+  background-color: rgb(11, 0, 15);
 }
